// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClinicListView Component should match snapshot for search results list 1`] = `
<div>
  <div>
    <div>
      Hidden Component
    </div>
    <span>
      smDown = true
      mdUp = false
      implementation = js
    </span>
    <div
      class="MuiBox-root MuiBox-root-7"
      tabindex="0"
    >
      <div
        class="MuiBox-root MuiBox-root-8"
      >
        <div
          type="style-6"
        >
          3 Clinics / Doctors found
        </div>
        <div
          class="ScreenReader-srOnly-9"
        >
          <div
            aria-live="polite"
            role="alert"
          >
            The filter has been applied and the number of clinics/doctors found is 3
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-10"
      >
        <div>
          <div>
            AutoSizer Component 
          </div>
          <div
            style="height: 600px; width: 600px; overflow: auto; position: relative; will-change: transform;"
          >
            <div
              style="height: 0px; width: 100%;"
            >
              <div
                class="MuiBox-root MuiBox-root-11"
                style="position: absolute; left: 0px; top: 0px; width: 100%;"
              >
                <div
                  class="ClinicListView-itemContainer-1"
                >
                  <div>
                    <div
                      class="ClinicListView-terminatedContainer-4"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        role="presentation"
                        style="width: 1.125rem; height: 1.125rem;"
                        viewBox="0 0 18 18"
                      >
                        <path
                          d="M9 18C13.9706 18 18 13.9706 18 9C18 4.02944 13.9706 0 9 0C4.02944 0 0 4.02944 0 9C0 13.9706 4.02944 18 9 18Z"
                          fill="#FFBB33"
                        />
                        <path
                          d="M9.00098 6.25C9.69133 6.25 10.251 5.69036 10.251 5C10.251 4.30964 9.69133 3.75 9.00098 3.75C8.31062 3.75 7.75098 4.30964 7.75098 5C7.75098 5.69036 8.31062 6.25 9.00098 6.25Z"
                          fill="#333333"
                        />
                        <path
                          d="M9.89997 8.25H8.09998V14.25H9.89997V8.25Z"
                          fill="#333333"
                        />
                      </svg>
                      <div
                        class="ClinicListView-terminatedText-5"
                      >
                        Terminated
                      </div>
                    </div>
                  </div>
                  <div
                    class="ClinicListView-info-3"
                  >
                    <div>
                      clinic 1
                    </div>
                    <div>
                      GENERAL SURGERY
                    </div>
                    <div>
                      132 Nathan Road, Tsim Sha Tsui, Kowloon
                    </div>
                  </div>
                  <button
                    aria-label="View clinic details for clinic 1"
                    class="MuiButtonBase-root MuiButton-root ClinicListView-buttonViewClinicDetail-2 MuiButton-text MuiButton-fullWidth"
                    data-testid="btn-view-clinic-detail-1"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      View clinic details
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
              <div
                class="MuiBox-root MuiBox-root-52"
                style="position: absolute; left: 0px; top: 0px; width: 100%;"
              >
                <div
                  class="ClinicListView-itemContainer-1"
                >
                  <div />
                  <div
                    class="ClinicListView-info-3"
                  >
                    <div>
                      clinic 2
                    </div>
                    <div>
                      GASTRO ENTEROLOGY & HEPATOLOGY
                    </div>
                    <div>
                      4/F, 9 Queen's Road Central, Central, Hong Kong
                    </div>
                  </div>
                  <button
                    aria-label="View clinic details for clinic 2"
                    class="MuiButtonBase-root MuiButton-root ClinicListView-buttonViewClinicDetail-2 MuiButton-text MuiButton-fullWidth"
                    data-testid="btn-view-clinic-detail-2"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      View clinic details
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
              <div
                class="MuiBox-root MuiBox-root-53"
                style="position: absolute; left: 0px; top: 0px; width: 100%;"
              >
                <div
                  class="ClinicListView-itemContainer-1"
                >
                  <div />
                  <div
                    class="ClinicListView-info-3"
                  >
                    <div>
                      clinic 3
                    </div>
                    <div>
                      CARDIOLOGY
                    </div>
                    <div>
                      Room 1311, Central Building, 1-3 Pedder St., Central, Hong Kong
                    </div>
                  </div>
                  <button
                    aria-label="View clinic details for clinic 3"
                    class="MuiButtonBase-root MuiButton-root ClinicListView-buttonViewClinicDetail-2 MuiButton-text MuiButton-fullWidth"
                    data-testid="btn-view-clinic-detail-3"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      View clinic details
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClinicListView Component should match snapshot for stacked clinics list 1`] = `
<div>
  <div>
    <div>
      Hidden Component
    </div>
    <span>
      smDown = true
      mdUp = false
      implementation = js
    </span>
    <div
      class="MuiBox-root MuiBox-root-142"
      tabindex="0"
    >
      <div
        class="MuiBox-root MuiBox-root-143"
      >
        <button
          class="MuiTypography-root MuiLink-root MuiLink-underlineNone MuiLink-button MuiTypography-colorPrimary"
          data-testid="btn-back-to-results"
        >
          <div
            color="hyperlink"
            type="style-6"
          >
            Back to results
          </div>
        </button>
      </div>
      <div
        class="MuiBox-root MuiBox-root-180"
      >
        <div
          type="style-6"
        >
          2 clinics at this location
        </div>
        <div
          class="ScreenReader-srOnly-181"
        >
          <div
            aria-live="polite"
            role="alert"
          >
            The filter has been applied and the number of clinics/doctors found is 2
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-182"
      >
        <div>
          <div>
            AutoSizer Component 
          </div>
          <div
            style="height: 600px; width: 600px; overflow: auto; position: relative; will-change: transform;"
          >
            <div
              style="height: 0px; width: 100%;"
            >
              <div
                class="MuiBox-root MuiBox-root-183"
                style="position: absolute; left: 0px; top: 0px; width: 100%;"
              >
                <div
                  class="ClinicListView-itemContainer-136"
                >
                  <div />
                  <div
                    class="ClinicListView-info-138"
                  >
                    <div>
                      clinic 2
                    </div>
                    <div>
                      GASTRO ENTEROLOGY & HEPATOLOGY
                    </div>
                    <div>
                      4/F, 9 Queen's Road Central, Central, Hong Kong
                    </div>
                  </div>
                  <button
                    aria-label="View clinic details for clinic 2"
                    class="MuiButtonBase-root MuiButton-root ClinicListView-buttonViewClinicDetail-137 MuiButton-text MuiButton-fullWidth"
                    data-testid="btn-view-clinic-detail-2"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      View clinic details
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
              <div
                class="MuiBox-root MuiBox-root-215"
                style="position: absolute; left: 0px; top: 0px; width: 100%;"
              >
                <div
                  class="ClinicListView-itemContainer-136"
                >
                  <div />
                  <div
                    class="ClinicListView-info-138"
                  >
                    <div>
                      clinic 3
                    </div>
                    <div>
                      CARDIOLOGY
                    </div>
                    <div>
                      Room 1311, Central Building, 1-3 Pedder St., Central, Hong Kong
                    </div>
                  </div>
                  <button
                    aria-label="View clinic details for clinic 3"
                    class="MuiButtonBase-root MuiButton-root ClinicListView-buttonViewClinicDetail-137 MuiButton-text MuiButton-fullWidth"
                    data-testid="btn-view-clinic-detail-3"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      View clinic details
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClinicListView Component should match snapshot when no clinics found on search 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root-70"
  >
    <img
      alt=""
      height="40%"
      src="/static/error.svg"
    />
    <div
      class="MuiBox-root MuiBox-root-71"
    >
      <div
        type="style-1"
      >
        No clinics available
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-72"
    >
      <div
        type="style-6"
      >
        There are no clinics matching your search criteria.
      </div>
    </div>
  </div>
</div>
`;
